* Rename FmGtkBookmarks to FmBookmarks and move it to src/base. * Move UI XML definition to main-win-ui.c. * Update TODO.

--- a/TODO
+++ b/TODO
@@ -90,3 +90,6 @@
 
 28.Show available disk space in status bar => related to #26.
 
+29.FmBookmarks to manage and monitor bookmarks.
+
+30.Make libfm a real library.
