--- a/TODO
+++ b/TODO
@@ -16,6 +16,9 @@
 3. File operations: move, copy, trashing, ...
      Implement correct error handling.
      Already works for FmDirListJob.
+     Confirm before deleting/trashing.
+     Rename/overwrite files appropriately when destination file
+     already exists.
 
 4. Dnd
      Dnd destination, drop site handling. => Almost done
@@ -93,3 +96,13 @@
 29.FmBookmarks to manage and monitor bookmarks.
 
 30.Make libfm a real library.
+
+31.Bring some fallback icons (application-x-generic and folder) along with
+     the package of libfm to work without icon themes.
+
+32.Install our own special xml file to mime database to provide some
+     frequently-seen filetypes which are not included in shared-mime-info.
+
+33.Fix the broken accelerators: Alt+D to move to location bar.
+
+34.GtkFileChooser style path button bar. (can take the one in gtk)
