--- a/TODO
+++ b/TODO
@@ -27,6 +27,7 @@
      Refuse drop if the user doesn't has access to destination dir.
      Fix incorrect drop target item of icon view mode. => done
      Fix incorrect design of 'query-info' signal.
+     Implement XDS support => pending
 
 * Better file size calculations
      prevent divided by zero problem. (calculate percentage when total size = 0)
@@ -48,10 +49,12 @@
      A FmThumbnailJob is needed.
 
 * Custom actions for specific file types.
-     integration with archivers is a must have
+     integration with archivers is a must have, but how?
+     Maybe we can use the implementation proposed by KDE.
 
 * Auto-completion for path entry
      GFilenameCompleter is buggy. we need to develop our own.
+     Maybe we can use FmFolderModel for this purpose.
 
 * API to empty trash (just deleting everything under trash:/// can make it.)
 
@@ -63,6 +66,7 @@
      This already works with remote URLs.
      Need to be done for removable devices. => partially done
      Now mounting works when the user click on a volume in side pane.
+     Not available yet in computer:///
 
 * Browse History for 'Back' and 'Forward'. => almost done but still buggy
 
@@ -76,6 +80,7 @@
 
 * Implement fm_list_concat_glist to add a GList* to FmList or to convert
      a GList to FmList by fm_list_new followed by fm_list_concat_glist()
+     => Not currently used, low priority
 
 * Emit pseudo 'changed' signals on file monitors which are not supported
      by gio/gvfs, such as some remote file systems, after we do some
@@ -92,11 +97,17 @@
 
 * Warn the user for insufficient disk space before file operations.
 
-* Periodically remove thumbnail caches.
+* Provide a wizard to clean temporary files from the filesystem to get more
+     usable disk space. => a disk cleaner is needed.
+     This can be showed to the user when there is not available disk space.
+
+* Periodically remove thumbnail caches. (low priority)
+     Maybe it's a better idea to handle this in disk cleaner wizard.
 
 * Show available disk space in status bar => related to #26.
 
 * FmBookmarks to manage and monitor bookmarks. => partially done.
+     Need to refactor the API.
 
 * Make libfm a real library. => partially done
      Need to seperate gtk+-dependet part from the core part.
@@ -115,15 +126,14 @@
 * Offer some global options like whether to use Trash bin or not to ease
      the development of file manager and all programs using this lib can
      all have consistent behavior.
-     Should we use lxconf here?
-     A class named FmConf is a good idea.
+     should we use lxconf? Not a good idea for now
+     class FmConfig can handle this part => partially done
+     Maybe we can utilize XClientMessage to send notifications and let
+     all apps using libfm to reload the config files. (similar to gtkrc and qt-config)
 
 * Support mount specific filesystem encoding in the future. Now we only
      handle UTF-8 for simplicity.
-
-* Find a way to share common configuration among all apps using libfm.
-     should we use lxconf?
-     class FmConf can handle this part
+     Those settings can be stored in FmConfig?
 
 * Handle special files like FIFO, socket, ...etc.
      partially done for local UNIX fileystems.
@@ -154,4 +164,10 @@
 
 * Add filter to FmFolderModel, so we can only show specific files.
      The API can be compatible with GtkFileFilter used by GtkFileChooser.
+     The hidden parts can be stored in model->hidden GSequence.
 
+* Add FmGesture to support mouse gesture. (low priority)
+     Maybe this should in another lib to be used in other programs, too.
+
+* Hiding computer:///, network:///, and disable trash:/// if gvfs is not
+     available. (low priority)
