--- a/TODO
+++ b/TODO
@@ -52,9 +52,8 @@
      integration with archivers is a must have, but how?
      Maybe we can use the implementation proposed by KDE.
 
-* Auto-completion for path entry
-     GFilenameCompleter is buggy. we need to develop our own.
-     Maybe we can use FmFolderModel for this purpose.
+* FmPathEntry: FmFolderModel based auto-completion needs fallback for
+     entries not part of current assigned folder model.
 
 * API to empty trash (just deleting everything under trash:/// can make it.)
 
