--- a/TODO
+++ b/TODO
@@ -84,6 +84,9 @@
 
 * Update icons when gtk+ icon theme gets changed.
 
+* Select destination files when copy or move is finished.
+  Can use g_object_set_data to associate a FmFolderView with FmJob.
+
 
 
 [Medium Priority]
