* Implement basic DND support for FmPlacesView. * Optimize icon displayed in FmPlacesView. * Fix invalid g_object_unref in FmFileOpsJob. * Implement "Empty Trash". * Support adding and removing bookmark items.

--- a/TODO
+++ b/TODO
@@ -42,7 +42,7 @@
 
 * Popup menu for blank area of the folder view. => partially done
 
-* Add "Create New" to popup menu of folder.
+* Add "Create New" to popup menu of folder. => partially done
 
 * Show available disk space in status bar => related to #26.
 
