--- a/TODO
+++ b/TODO
@@ -79,6 +79,7 @@
 * Select destination files when copy or move is finished.
   Can use g_object_set_data to associate a FmFolderView with FmJob.
 
+* FmNavHistory: should remember previous scroll positions.
 
 
 [Medium Priority]
