--- a/po/es.po
+++ b/po/es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libfm 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-02-09 04:36+0000\n"
+"POT-Creation-Date: 2010-02-10 01:24+0100\n"
 "PO-Revision-Date: 2010-02-09 11:50-0500\n"
 "Last-Translator: Hugo Florentino <sysadmin@cips.cu>\n"
 "Language-Team: \n"
@@ -97,8 +97,11 @@ msgid "Operations that the owner of the file can do"
 msgstr "Operaciones que puede hacer el propietario del archivo"
 
 #: ../data/ui/file-prop.glade.h:21
-msgid "Operations that users of the same group with the owner of the file can do"
-msgstr "Operaciones que pueden hacer los usuarios del mismo grupo que el propietario del archivo"
+msgid ""
+"Operations that users of the same group with the owner of the file can do"
+msgstr ""
+"Operaciones que pueden hacer los usuarios del mismo grupo que el propietario "
+"del archivo"
 
 #: ../data/ui/file-prop.glade.h:22
 msgid "Read and Write"
@@ -110,7 +113,8 @@ msgstr "Sólo lectura"
 
 #: ../data/ui/file-prop.glade.h:24
 msgid "Select the application used to open files of this type "
-msgstr "Seleccione la aplicación utilizada para abrir los archivos de este tipo"
+msgstr ""
+"Seleccione la aplicación utilizada para abrir los archivos de este tipo"
 
 #: ../data/ui/file-prop.glade.h:25
 msgid "Write only"
@@ -237,8 +241,7 @@ msgstr "Desmontar volumen"
 msgid "Eject Removable Media"
 msgstr "Expulsar medio extraíble"
 
-#: ../src/gtk/fm-places-view.c:143
-#: ../src/gtk/fm-places-view.c:741
+#: ../src/gtk/fm-places-view.c:143 ../src/gtk/fm-places-view.c:741
 msgid "Rename Bookmark Item"
 msgstr "Renombrar marcador"
 
@@ -311,8 +314,11 @@ msgid "Please enter a valid group name or numeric id."
 msgstr "Por favor, introduzca un nombre de grupo o id. numérica válida."
 
 #: ../src/gtk/fm-file-properties.c:353
-msgid "Do you want to recursively apply these changes to all files and sub-folders?"
-msgstr "¿Desea aplicar recursivamente estos cambios a todos los archivos y subcarpetas?"
+msgid ""
+"Do you want to recursively apply these changes to all files and sub-folders?"
+msgstr ""
+"¿Desea aplicar recursivamente estos cambios a todos los archivos y "
+"subcarpetas?"
 
 #: ../src/gtk/fm-file-properties.c:620
 msgid "Files of different types"
@@ -335,8 +341,7 @@ msgstr "XDirectSave ha fallado."
 msgid "It's not a valid directory"
 msgstr "No es un directorio válido"
 
-#: ../src/base/fm-utils.c:52
-#: ../src/base/fm-utils.c:81
+#: ../src/base/fm-utils.c:52 ../src/base/fm-utils.c:81
 #, c-format
 msgid "%u byte"
 msgid_plural "%u bytes"
@@ -382,4 +387,3 @@ msgstr "Atajos"
 #: ../src/base/fm-file-info.c:55
 msgid "Mount Point"
 msgstr "Punto de montaje"
-
